UPDATE: Estrutura do HTML

--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
+      rel="stylesheet"/>
+      <link rel="stylesheet" href="style.css">
     <title>Extensão TT</title>
-</head>
-<body>
-    <h1>Texto Teste.</h1>
-</body>
+  </head>
+  <body>
+    <div class="container-pai">
+        <header class="cabecalho"></header> 
+
+        <input type="nome" name="text" id="input-text" class="input-text" maxlength="500" placeholder="Digite o texto aqui!" required>
+
+        <div class="container-button">
+            <button>MAIÚSCULAS</button>
+            <button>minúsculas</button>
+        </div>
+
+        <div name="result" id="result" class="result">Resultado: </div>
+    </div>
+
+    <script src="scritp.js"></script>
+  </body>
 </html>
