UPDATE: Configuração base do CSS e Button HTML

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <input type="nome" name="text" id="input-text" class="input-text" maxlength="500" placeholder="Digite o texto aqui!" required>
 
         <div class="container-button">
-            <button>MAIÚSCULAS</button>
-            <button>minúsculas</button>
+            <button class="btn" id="btnMaiuscula">MAIÚSCULAS</button>
+            <button class="btn" id="btnMinuscula">minúsculas</button>
         </div>
 
         <div name="result" id="result" class="result">Resultado: </div>
     </div>
 
-    <script src="scritp.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
